fix nav wrap for mobile

--- a/app/styles/_mincss.styl
+++ b/app/styles/_mincss.styl
@@ -65,13 +65,13 @@ textarea,input[type=text]
   .row, .col
     width 100%
 
-@media (max-width: 500px)
-  .btn.btn-close
-    display block
-  a
-    padding .5em 0
-    display block
-    width 50%
+//@media (max-width: 500px)
+//  .btn.btn-close
+//    display block
+//  a
+//    padding .5em 0
+//    display block
+//    width 50%
 
 .table th,.table td
   padding .5em
